--- a/assets/css/web.css
+++ b/assets/css/web.css
@@ -583,24 +583,16 @@ nav {
 /* Mobile S (320px) */
 @media (max-width: 320px) {
     .web-development-section h1 {
-        margin-top: 16%; /* Increased top margin for Mobile S */
+        margin-top: 20%; /* Increased top margin for Mobile S */
     }
 }
 
 /* Mobile M (375px) */
 @media (max-width: 375px) {
     .web-development-section h1 {
-        margin-top: 16%; /* Slightly increased top margin for Mobile M */
+        margin-top: 20%; /* Set top margin to 20% for Mobile M */
     }
 }
-
-
-
-
-
-
-
-
 
 
 
